# internal/gateway/http/gen/models.gen.go
@@ -1,6 +1,6 @@
 // Package gen provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
 package gen
 
 // BuildInfo defines model for BuildInfo.
@@ -46,6 +46,21 @@ type LoginUserRequest struct {
 type LoginUserResponse struct {
 	// AccessToken JWT token for accessing protected routes
 	AccessToken string `json:"accessToken"`
+
+	// RefreshToken JWT refresh token for refreshing tokens
+	RefreshToken string `json:"refreshToken"`
+}
+
+// RefreshAccessTokenRequest defines model for RefreshAccessTokenRequest.
+type RefreshAccessTokenRequest struct {
+	// RefreshToken JWT refresh token of the existing user
+	RefreshToken string `json:"refreshToken"`
+}
+
+// RefreshAccessTokenResponse defines model for RefreshAccessTokenResponse.
+type RefreshAccessTokenResponse struct {
+	// AccessToken JWT access token for accessing protected routes
+	AccessToken string `json:"accessToken"`
 }
 
 // RegisterUserRequest defines model for RegisterUserRequest.
@@ -68,6 +83,9 @@ type RegisterUserResponse struct {
 
 // PostLoginJSONRequestBody defines body for PostLogin for application/json ContentType.
 type PostLoginJSONRequestBody = LoginUserRequest
+
+// PostRefreshJSONRequestBody defines body for PostRefresh for application/json ContentType.
+type PostRefreshJSONRequestBody = RefreshAccessTokenRequest
 
 // PostRegisterJSONRequestBody defines body for PostRegister for application/json ContentType.
 type PostRegisterJSONRequestBody = RegisterUserRequest
